# InkTrace

./: .gitignore  ALGORITHM_RECONSTRUCTION.md  ARCHITECTURE.md  CONFIG_REFERENCE.md  DENSE_VISUALIZATION_GUIDE.md  FILE_STRUCTURE.md  InkTrace.ipynb  PARAMETER_CONSISTENCY_CHECK.md  TRAINING_GUIDE.md  VISUALIZATION.md  XPU_README.md  a.py  check_devices.py  convert_checkpoint.py  data.py  dataset.py  datasets.py  datasets_v2.py  decoder.py  dense_gen.py  dense_heads.py  dense_models.py  detr_decoder.py  encoder.py  evaluate_metrics.py  graph_reconstruction.py  inference.py  lightning_data.py  lightning_model.py  lightning_vis.py  losses.py  mnist.ipynb  model.py  models.py  pixel_decoder.py  requirements.txt  requirements_colab.txt  test_crossing.py  test_muon_mnist.py  test_reconstruction.py  (+33 more)
configs/: default.yaml
dataset/: Cargo.toml  pyproject.toml
dataset/src/: generator.rs  geometry.rs  lib.rs  rasterize.rs  stroke.rs  tests.rs
results_vis/: metrics.txt
runs/phase1_20260127_211621/: events.out.tfevents.1769519781.FuwakisLinux.1093937.0
